--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -1,3 +1,4 @@
+
 name: 'Ansible'
 
 on:
@@ -22,7 +23,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           github_token: ${{secrets.GITHUB_TOKEN}}
-          workflow: terraform.yml
+          workflow: terrafrom.yml
           workflow_conclusion: success
           name: terraform
 
@@ -37,9 +38,11 @@ jobs:
             echo "$SSH" > ansible/key.pem
             chmod 400 ansible/key.pem
             cat ansible/key.pem
+            
       - name: Ansible
         uses: saubermacherag/ansible-playbook-docker-action@v1.3
         with:
           playbookName: 'ansible/deploy.yml'
           inventoryFile: 'ansible/hosts'
           keyFile: 'ansible/key.pem'
+
