--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: Update OS Ubuntu Server 20.04
-      command: apt -y update    
+      command: apt-get -y update    
          
     - name: Install required system packages for Docker CE
       apt: name={{ item }} state=latest update_cache=yes
