--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -14,12 +14,6 @@
     - name: Install Docker py
       command: pip3 install docker-py
     
-    - name: Install Docker-compose
-      get_url:
-        url:  https://github.com/docker/compose/releases/download/1.26.0/docker-compose-{{ansible_system}}-{{ansible_userspace_architecture}}
-        dest: /usr/local/bin/docker-compose
-        mode: 'a+x'
-
     - name: Add Docker GPG apt Key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
@@ -29,17 +23,40 @@
       apt_repository:
         repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
-
-    - name: Update apt and install docker-ce
-      apt: update_cache=yes name=docker-ce state=latest
+  
+    - name: Install docker
+      remote_user: ubuntu
+      apt:
+      name: docker-ce
+      state: present
+      update_cache: yes
+      #notify: Start docker on boot
+      tags:
+      - docker
     
+    - name: Add remote "ubuntu" user to "docker" group
+      remote_user: ubuntu
+      user:
+      name: "ubuntu"
+      group: "docker"
+      append: yes
+      tags:
+      - docker   
+    
+    - name: Install docker-compose
+      remote_user: ubuntu
+      get_url: 
+      url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
+      dest: /usr/local/bin/docker-compose
+      mode: 'u+x,g+x'
+  
     - name: Copy docker-compose.yml
       ansible.builtin.copy:
         src: dc_workpress.yml
-        dest: /wp/
+        dest: /usr/local/bin/docker-compose
         owner: ubuntu
-        group: root
-        mode: u=rw,g=r,o=r
+        group: docker
+        mode: 'u+x,g+x'
 
     - name: Start Docker-compose
       command: 'docker-compose up -d' 
