--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -24,15 +24,8 @@
         repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
   
-    - name: Install docker
-      remote_user: ubuntu
-      apt:
-      name: docker-ce
-      state: present
-      update_cache: yes
-      #notify: Start docker on boot
-      tags:
-      - docker
+    - name: Update apt and install docker-ce
+      apt: update_cache=yes name=docker-ce state=latest
     
     - name: Add remote "ubuntu" user to "docker" group
       remote_user: ubuntu
