--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -27,7 +27,7 @@
     - name: Update apt and install docker-ce
       apt: update_cache=yes name=docker-ce state=latest
     
-    - name: Add remote "ubuntu" user to "docker" group
+    - name: Add remote user to group
       remote_user: ubuntu
       user:
       name: "ubuntu"
