--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -23,16 +23,16 @@
       apt_repository:
         repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
-  
+
+
     - name: Update apt and install docker-ce
-      apt: update_cache=yes name=docker-ce state=latest
-    
+      apt: update_cache=yes name=docker-ce state=lates
+
     - name: Install docker-compose
-      remote_user: ubuntu
       get_url: 
-      url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
-      dest: /usr/local/bin/docker-compose
-      mode: 'u+x,g+x'
+        url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
+        dest: /usr/local/bin/docker-compose
+        mode: 'u+x,g+x'
   
     - name: Copy docker-compose.yml
       ansible.builtin.copy:
