--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -24,22 +24,15 @@
         repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
 
-
-    - name: Update apt and install docker-ce
-      apt: update_cache=yes name=docker-ce state=lates
+    - name: Install Docker
+      package:
+        name: docker-ce
+        state: latest
 
     - name: Install docker-compose
       get_url: 
         url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
         dest: /usr/local/bin/docker-compose
-        mode: 'u+x,g+x'
-  
-    - name: Copy docker-compose.yml
-      ansible.builtin.copy:
-        src: dc_workpress.yml
-        dest: /usr/local/bin/docker-compose
-        owner: ubuntu
-        group: root
         mode: 'u+x,g+x'
 
     - name: Start Docker-compose
