--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -29,11 +29,16 @@
         name: docker-ce
         state: latest
 
-    - name: Install docker-compose
-      get_url: 
-        url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        mode: 'u+x,g+x'
+    - name: Update apt and install docker-ce
+      apt: update_cache=yes name=docker-ce state=latest
+    
+    - name: Copy docker-compose.yml
+      ansible.builtin.copy:
+        src: dc_wordpress.yml
+        dest: /ansible/
+        owner: ubuntu
+        group: root
+        mode: u=rw,g=r,o=r
 
     - name: Start Docker-compose
       command: 'docker-compose up -d' 
