--- a/ansible/dc_wordpress_deploy.yml
+++ b/ansible/dc_wordpress_deploy.yml
@@ -24,10 +24,11 @@
         repo: deb https://download.docker.com/linux/ubuntu bionic stable
         state: present
 
-    - name: Install Docker
-      package:
-        name: docker-ce
-        state: latest
-
     - name: Update apt and install docker-ce
       apt: update_cache=yes name=docker-ce state=latest
+    
+    - name: Install docker-compose
+    get_url: 
+      url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
+      dest: /usr/local/bin/docker-compose
+      mode: 'u+x,g+x'
